<resources>
    <string name="app_name">Pilot Logbook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="last_name_is_empty">Last name is empty</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="repeat_password_is_empty">Repeat password is empty</string>
    <string name="repeat_password_mismatch">Password mismatch</string>
    <string name="account_already_exist">Account already exist</string>
    <string name="email_not_found">Email not found</string>
    <string name="password_not_found">Password not found</string>
    <string name="email_patterns_error">That`s not valid email</string>
    <string name="password_length_error">The password needs to consist at least 8 characters</string>
    <string name="date_is_empty">The date can`t by empty</string>
    <string name="departure_place_is_empty">The departurePlace can`t be empty</string>
    <string name="departure_time_is_empty">The departureTime can`t be empty</string>
    <string name="arrival_place_is_empty">The arrivalPlace can`t be empty</string>
    <string name="arrival_time_is_empty">The arrivalTime can`t be empty</string>
    <string name="model_is_empty">The model can`t be empty</string>
    <string name="registration_is_empty">The registration can`t be empty</string>
    <string name="total_time_of_flight_is_empty">The totalTimeOfFlight can`t be empty</string>
    <string name="add_flight_title_date">Date</string>
    <string name="add_flight_title_departure">Departure</string>
    <string name="add_flight_title_arrival">Arrival</string>
    <string name="add_flight_title_aircraft">Aircraft</string>
    <string name="add_flight_title_single_pilot_time">Single Pilot Time</string>
    <string name="add_flight_title_multi_pilot_time">Multi Pilot Time</string>
    <string name="add_flight_title_pic_name">Pic Name</string>
    <string name="add_flight_title_landings">Landings</string>
    <string name="add_flight_title_operational_condition_time">Operational Condition Time</string>
    <string name="add_flight_title_pilot_function_time">Pilot Function Time</string>
    <string name="add_flight_title_synthetic_training_devices_session">Synthetic Training Devices Session</string>
    <string name="add_flight_title_remarks_and_endorsements">Remarks And Endorsements</string>
    <string name="add_flight_title_total_time_of_flight">Total Time Of Flight</string>
    <string name="add_daily_flight">Add Daily Flight</string>
    <string name="not_valid_departure_time_type">Not valid type.For exam type shoud by  "1.20"</string>
    <string name="btn_log_out_profile">logout</string>
    <string name="start_flight">Start Flight</string>
    <string name="daily_flight_item_date_title">12.12.2023</string>
    <string name="daily_flight_item_model_title">AN-2</string>
    <string name="daily_flight_item_registration_title">AB1JDN41</string>
    <string name="daily_flight_item_ttof_title">1</string>
    <string name="daily_flight_item_departure_title">Boyarka</string>
    <string name="daily_flight_item_departure_time_title">12:30</string>
    <string name="daily_flight_item_arrival_title">Kyiv</string>
    <string name="daily_flight_item_arrival_time_title">13:30</string>
    <string name="add_flight_title_place">Place</string>
    <string name="add_flight_title_time">Time</string>
    <string name="add_flight_title_arrival_place">Place</string>
    <string name="add_flight_title_arrival_time">Time</string>
    <string name="add_flight_title_model">Model</string>
    <string name="add_flight_title_registration">Registration</string>
    <string name="add_flight_title_se">SE</string>
    <string name="add_flight_title_me">ME</string>
    <string name="add_flight_title_mpt">Time</string>
    <string name="add_flight_title_ttof">Total Time Of Flight</string>
    <string name="add_flight_title_name">Name</string>
    <string name="add_flight_title_lanidng_day">Day</string>
    <string name="add_flight_title_landing_night">Night</string>
    <string name="add_flight_title_opc_night">Night</string>
    <string name="add_flight_title_opc_ifr">IFR</string>
    <string name="add_flight_title_pic">Pilot in Comand</string>
    <string name="add_flight_title_co_pilot">Co-Pilot</string>
    <string name="add_flight_title_dual">Dual</string>
    <string name="add_flight_title_instructor">Instructor</string>
    <string name="add_flight_title_stdsd_date">Date</string>
    <string name="add_flight_title_stdst_type">Type</string>
    <string name="add_flight_title_stdst_ttos">Total Time Of Session</string>
    <string name="add_flight_title_remarks">Remarks And Endorsements</string>
    <string name="add_flight_title_add_daily_flight">Add Daily Flight</string>
    <string name="details_daily_flight_se_time">2:30</string>
    <string name="details_daily_flight_me_time">1:20</string>
    <string name="details_daily_flight_multi_pilot_time_title">Time</string>
    <string name="details_daily_flight_multi_pilot_time">3:25</string>
    <string name="details_daily_flight_total_time_of_flight_title">Time</string>
    <string name="details_daily_flight_total_time_of_flight_time">5:15</string>
    <string name="details_daily_flight_pic_name_time">Pic name</string>
    <string name="details_daily_flight_pic_name_time_title">Name</string>
    <string name="details_daily_flight_pic_name">Andrew</string>
    <string name="details_daily_flight_landings_time">Landings</string>
    <string name="details_daily_flight_landings_day_time_title">Day</string>
    <string name="details_daily_flight_landings_day_time">2:30</string>
    <string name="details_daily_flight_landings_night_time_title">Night</string>
    <string name="details_daily_flight_landings_night_time">1:20</string>
    <string name="details_daily_flight_opr_time">Operational condition time</string>
    <string name="details_daily_flight_opr_night_time_title">Night</string>
    <string name="details_daily_flight_opr_night_time">2:30</string>
    <string name="details_daily_flight_opr_ifr_time_title">IFR</string>
    <string name="details_daily_flight_opr_ifr_time">1:20</string>
    <string name="details_daily_flight_pft_time">Pilot function time</string>
    <string name="details_daily_flight_pft_pic_time_title">Pilot in comand</string>
    <string name="details_daily_flight_pft_pic_time">2:30</string>
    <string name="details_daily_flight_pft_co_pilot_time_title">Co-Pilot</string>
    <string name="details_daily_flight_pft_co_pilot_time">1:20</string>
    <string name="details_daily_flight_pft_dual_time_title">Dual</string>
    <string name="details_daily_flight_pft_dual_time">1:20</string>
    <string name="details_daily_flight_pft_instructor_time_title">Instructor</string>
    <string name="details_daily_flight_pft_instructor_time">1:20</string>
    <string name="details_daily_flight_stds_time">Synthetic training devices session</string>
    <string name="details_daily_flight_stds_time_date_title">Date</string>
    <string name="details_daily_flight_stds_date_time">2:30</string>
    <string name="details_daily_flight_stds_type_time_title">Type</string>
    <string name="details_daily_flight_stds_type_time">1:20</string>
    <string name="details_daily_flight_stds_ttos_time_title">Total time of session</string>
    <string name="details_daily_flight_stds_ttos_time">1:20</string>
    <string name="details_daily_flight_remarks_and_endorsements_time">Remarks and endorsements</string>
    <string name="details_daily_flight_remarks_time">Remarks</string>
    <string name="profile_name_lastName">Name LastName</string>
    <string name="profile_email">Email</string>
    <string name="profile_total_daily_flight_time_title">Total daily flight time</string>
    <string name="profile_total_daily_flight_time">0:30</string>
    <string name="profile_total_daily_flight_title">Total daily flight</string>
    <string name="profile_total_daily_flight">1</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_login">Log In</string>
    <string name="sign_in_dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_lastName">Last Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_repeat_password">Repeat Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="error_please_try_again">Error!Please try again</string>
    <string name="try_again">Try again</string>
    <string name="nav_menu_start_flight">Start Flight</string>
    <string name="daily_fragment">Daily Fragment</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="add_daily_flight_log">Add Daily Flight Log</string>
    <string name="tool_bar_menu_default">Default</string>
    <string name="date_desc">Date desc</string>
    <string name="date_asc">Date asc</string>
    <string name="time_flight_desc">Time flight desc</string>
    <string name="time_flight_asc">Time flight asc</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_profile_first_name">First Name</string>
    <string name="edit_profile_last_name">Last Name</string>
    <string name="edit_profile_btn_edit">Edit</string>


</resources>