<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.fragments.register.SignUpFragment"
    android:background="@color/grey_blue">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:text="@string/sign_up"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/etName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignUp"
        android:layout_marginTop="50dp"
        android:hint="@string/sign_up_name"
        android:background="@drawable/white_background_edit_text"
        android:paddingStart="5dp"
        android:drawableStart="@drawable/ic_add_flight_person"
        android:drawablePadding="5dp"/>



    <EditText
        android:id="@+id/etLastName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName"
        android:layout_marginTop="40dp"
        android:hint="@string/sign_up_lastName"
        android:background="@drawable/white_background_edit_text"
        android:paddingStart="5dp"
        android:drawableStart="@drawable/ic_add_flight_co_pilot"
        android:drawablePadding="5dp"/>



    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLastName"
        android:layout_marginTop="40dp"
        android:hint="@string/sign_up_email"
        android:background="@drawable/white_background_edit_text"
        android:paddingStart="5dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"/>



    <EditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="40dp"
        android:hint="@string/sign_up_password"
        android:background="@drawable/white_background_edit_text"
        android:paddingStart="5dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="5dp"/>



    <EditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:layout_marginTop="40dp"
        android:hint="@string/sign_up_repeat_password"
        android:background="@drawable/white_background_edit_text"
        android:paddingStart="5dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="5dp"/>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRepeatPassword"
        android:layout_marginTop="30dp"
        android:text="@string/btn_sign_up"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="45dp"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>