<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.fragments.logbook.profile.EditProfileFragment"
    android:background="@color/light_gray">


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/editPersonAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_add_flight_person"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile_first_name"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile_last_name"
                android:gravity="center"
                android:layout_marginTop="50dp"/>

            <Button
                android:id="@+id/btnEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_btn_edit"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>



</FrameLayout>